# serde-nixos

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  TESTING.md  flake.nix
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
examples/: advanced_features.rs  auto_doc_example.rs  complex_config.rs  generate_nixos.rs  nested_types_full_def.rs  simple_config.rs
integration-test/: Cargo.toml  README.md  module.nix  nixos-test.nix
integration-test/src/: config.rs  generate_module.rs  main.rs
serde-nixos/: Cargo.toml
serde-nixos-macros/: Cargo.toml
serde-nixos-macros/src/: attributes.rs  lib.rs  nixos_type.rs  type_mapping.rs
serde-nixos/src/: generator.rs  lib.rs
tests/integration/: advanced_features.rs  auto_doc.rs  basic_types.rs  compound_types.rs  edge_case_structs.rs  enum_data_variants.rs  enum_types.rs  full_definition.rs  hashmap_keys.rs  module_generator.rs  nested_structs.rs  recursive_types.rs  serde_attrs_compat.rs  serde_default.rs  special_characters.rs
