[workspace]
members = [
    "serde-nixos-macros",
    "serde-nixos",
    "integration-test",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.70"
authors = ["Daniel Poelzleithner <git@poelzi.org>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/poelzi/serde-nixos"
description = "Generate NixOS type definitions from Rust structures"
homepage = "https://github.com/serde-nixos/serde-nixos"
keywords = ["nixos", "nix", "serde", "codegen", "types"]
categories = ["config", "encoding", "development-tools"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
