[ package ]
  name = "serde-nixos-test-service"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-nixos = { path = "../serde-nixos" }

[lib]
name = "test_service_config"
path = "src/config.rs"

[[bin]]
name = "test-service"
path = "src/main.rs"

[[bin]]
name = "generate-module"
path = "src/generate_module.rs"
